syntax = "proto3";

option java_multiple_files = true;
option java_package = "fr.mbpmx.polyphone.myapplication.auth";
option java_outer_classname = "AuthProto";
option objc_class_prefix = "Auth";

package auth;

service Auth {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Logout (LogoutRequest) returns (LogoutResponse) {}
    rpc RefreshToken (RefreshRequest) returns (RefreshResponse) {}
}

message LoginRequest {
    string password = 1;
    string username = 2;
}

message LoginResponse {
    string token = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {}

message RefreshRequest {
    string token = 1;
}

message RefreshResponse {
    string token = 1;
}